// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders as \`disabled\` when defined 1`] = `
.emotion-1 {
  width: 100%;
  max-width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  color: #FFF;
  background-color: #31373F;
  border: 1px solid #31373F;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
}

.emotion-1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-1:not(:focus):not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.emotion-1:invalid,
.emotion-1:-moz-ui-invalid {
  box-shadow: none;
}

.emotion-1:focus {
  border-color: #8697A2;
  outline: none;
}

.emotion-0 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697A2;
  font-size: 1rem;
  opacity: 0.5;
}

<fieldset>
  <label>
    <span
      className="emotion-0"
      disabled={true}
    >
      Text
    </span>
    <input
      className="emotion-1"
      disabled={true}
      placeholder=" "
      type="text"
    />
  </label>
  <label>
    <span
      className="emotion-0"
      disabled={true}
    >
      Date
    </span>
    <input
      className="emotion-1"
      disabled={true}
      placeholder=" "
      type="date"
    />
  </label>
  <label>
    <span
      className="emotion-0"
      disabled={true}
    >
      Email
    </span>
    <input
      className="emotion-1"
      disabled={true}
      placeholder=" "
      type="email"
    />
  </label>
  <label>
    <span
      className="emotion-0"
      disabled={true}
    >
      Number
    </span>
    <input
      className="emotion-1"
      disabled={true}
      placeholder=" "
      type="number"
    />
  </label>
  <label>
    <span
      className="emotion-0"
      disabled={true}
    >
      Password
    </span>
    <input
      className="emotion-1"
      disabled={true}
      placeholder=" "
      type="password"
    />
  </label>
  <label>
    <span
      className="emotion-0"
      disabled={true}
    >
      Search
    </span>
    <input
      className="emotion-1"
      disabled={true}
      placeholder=" "
      type="search"
    />
  </label>
  <label>
    <span
      className="emotion-0"
      disabled={true}
    >
      Telephone
    </span>
    <input
      className="emotion-1"
      disabled={true}
      placeholder=" "
      type="tel"
    />
  </label>
  <label>
    <span
      className="emotion-0"
      disabled={true}
    >
      URL
    </span>
    <input
      className="emotion-1"
      disabled={true}
      placeholder=" "
      type="url"
    />
  </label>
</fieldset>
`;

exports[`TextInput renders as an \`error\` when defined 1`] = `
.emotion-0 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697A2;
  font-size: 1rem;
}

.emotion-1 {
  width: 100%;
  max-width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  color: #FFF;
  background-color: #31373F;
  border: 1px solid #31373F;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  border-color: #FF4E64;
}

.emotion-1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-1:not(:focus):not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.emotion-1:invalid,
.emotion-1:-moz-ui-invalid {
  box-shadow: none;
}

.emotion-1:focus {
  border-color: #8697A2;
  outline: none;
}

<fieldset>
  <label>
    <span
      className="emotion-0"
    >
      Text
    </span>
    <input
      className="emotion-1"
      placeholder=" "
      type="text"
    />
  </label>
  <label>
    <span
      className="emotion-0"
    >
      Date
    </span>
    <input
      className="emotion-1"
      placeholder=" "
      type="date"
    />
  </label>
  <label>
    <span
      className="emotion-0"
    >
      Email
    </span>
    <input
      className="emotion-1"
      placeholder=" "
      type="email"
    />
  </label>
  <label>
    <span
      className="emotion-0"
    >
      Number
    </span>
    <input
      className="emotion-1"
      placeholder=" "
      type="number"
    />
  </label>
  <label>
    <span
      className="emotion-0"
    >
      Password
    </span>
    <input
      className="emotion-1"
      placeholder=" "
      type="password"
    />
  </label>
  <label>
    <span
      className="emotion-0"
    >
      Search
    </span>
    <input
      className="emotion-1"
      placeholder=" "
      type="search"
    />
  </label>
  <label>
    <span
      className="emotion-0"
    >
      Telephone
    </span>
    <input
      className="emotion-1"
      placeholder=" "
      type="tel"
    />
  </label>
  <label>
    <span
      className="emotion-0"
    >
      URL
    </span>
    <input
      className="emotion-1"
      placeholder=" "
      type="url"
    />
  </label>
</fieldset>
`;

exports[`TextInput renders correctly for other types 1`] = `
.emotion-0 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697A2;
  font-size: 1rem;
}

.emotion-1 {
  width: 100%;
  max-width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  color: #FFF;
  background-color: #31373F;
  border: 1px solid #31373F;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
}

.emotion-1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-1:not(:focus):not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.emotion-1:invalid,
.emotion-1:-moz-ui-invalid {
  box-shadow: none;
}

.emotion-1:focus {
  border-color: #8697A2;
  outline: none;
}

<fieldset>
  <label>
    <span
      className="emotion-0"
    >
      Text
    </span>
    <input
      className="emotion-1"
      placeholder=" "
      required={true}
      type="text"
    />
  </label>
  <label>
    <span
      className="emotion-0"
    >
      Date
    </span>
    <input
      className="emotion-1"
      placeholder=" "
      required={true}
      type="date"
    />
  </label>
  <label>
    <span
      className="emotion-0"
    >
      Email
    </span>
    <input
      className="emotion-1"
      placeholder=" "
      required={true}
      type="email"
    />
  </label>
  <label>
    <span
      className="emotion-0"
    >
      Number
    </span>
    <input
      className="emotion-1"
      placeholder=" "
      required={true}
      type="number"
    />
  </label>
  <label>
    <span
      className="emotion-0"
    >
      Password
    </span>
    <input
      className="emotion-1"
      placeholder=" "
      required={true}
      type="password"
    />
  </label>
  <label>
    <span
      className="emotion-0"
    >
      Search
    </span>
    <input
      className="emotion-1"
      placeholder=" "
      required={true}
      type="search"
    />
  </label>
  <label>
    <span
      className="emotion-0"
    >
      Telephone
    </span>
    <input
      className="emotion-1"
      placeholder=" "
      required={true}
      type="tel"
    />
  </label>
  <label>
    <span
      className="emotion-0"
    >
      URL
    </span>
    <input
      className="emotion-1"
      placeholder=" "
      required={true}
      type="url"
    />
  </label>
</fieldset>
`;

exports[`TextInput renders correctly with \`text\` type by default 1`] = `
.emotion-0 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697A2;
  font-size: 1rem;
}

.emotion-1 {
  width: 100%;
  max-width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  color: #FFF;
  background-color: #31373F;
  border: 1px solid #31373F;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
}

.emotion-1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-1:not(:focus):not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.emotion-1:invalid,
.emotion-1:-moz-ui-invalid {
  box-shadow: none;
}

.emotion-1:focus {
  border-color: #8697A2;
  outline: none;
}

<label>
  <span
    className="emotion-0"
  >
    Example Input
  </span>
  <input
    className="emotion-1"
    placeholder=" "
    type="text"
  />
</label>
`;

exports[`TextInput renders correctly without a label 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  color: #FFF;
  background-color: #31373F;
  border: 1px solid #31373F;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
}

.emotion-0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-0:not(:focus):not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.emotion-0:invalid,
.emotion-0:-moz-ui-invalid {
  box-shadow: none;
}

.emotion-0:focus {
  border-color: #8697A2;
  outline: none;
}

<input
  className="emotion-0"
  placeholder="Enter code"
  type="text"
/>
`;
